@@ -241,7 +241,9 @@ static jint JNICALL NativeRunAtariProgram(JNIEnv *env, jobject this,
 		CARTRIDGE_STD_4_DESC,
 		CARTRIDGE_RIGHT_4_DESC,
 		CARTRIDGE_BLIZZARD_32_DESC,
-		CARTRIDGE_MEGAMAX_2048_DESC
+		CARTRIDGE_MEGAMAX_2048_DESC,
+		CARTRIDGE_THECART_128M_DESC,
+		CARTRIDGE_MEGA_4096_DESC
 	};
 
 	const jbyte *img_utf = NULL;
