@@ -67,10 +67,12 @@ enum { CARTRIDGE_UNKNOWN        = -1,
        CARTRIDGE_RIGHT_4        = 59,
        CARTRIDGE_BLIZZARD_32    = 60,
        CARTRIDGE_MEGAMAX_2048   = 61,
-       CARTRIDGE_LAST_SUPPORTED = 61
+       CARTRIDGE_THECART_128M   = 62,
+       CARTRIDGE_MEGA_4096      = 63,
+       CARTRIDGE_LAST_SUPPORTED = 63
 };
 
-#define CARTRIDGE_MAX_SIZE	(2048 * 1024)
+#define CARTRIDGE_MAX_SIZE	(4096 * 1024)
 extern int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1];
 
 #define CARTRIDGE_STD_8_DESC         "Standard 8 KB cartridge"
@@ -134,6 +136,8 @@ extern int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1];
 #define CARTRIDGE_RIGHT_4_DESC       "Right slot 4 KB cartridge"
 #define CARTRIDGE_BLIZZARD_32_DESC   "Blizzard 32 KB cartridge"
 #define CARTRIDGE_MEGAMAX_2048_DESC  "MegaMax 2 MB cartridge"
+#define CARTRIDGE_THECART_128M_DESC  "The!Cart 128 MB cartridge"
+#define CARTRIDGE_MEGA_4096_DESC     "Flash MegaCart 4 MB cartridge"
 
 /* Indicates whether the emulator should automatically reboot (coldstart)
    after inserting/removing a cartridge. (Doesn't affect the piggyback
